@@ -159,7 +159,28 @@ make_asc(mmdb::Manager *mol) {
    asc.UDDOldAtomIndexHandle = -1;
 
    return asc;
-} 
+}
+
+void
+atom_selection_container_t::fill_links(mmdb::Manager *mol_other) {
+
+   if (1) {  // debugging
+      if (mol_other) { 
+	 mmdb::Model *model_p = mol_other->GetModel(1);
+	 if (model_p) {
+	    unsigned int n_links = model_p->GetNumberOfLinks();
+	    links.resize(n_links);
+	    for (unsigned int i=0; i<n_links; i++) { 
+	       mmdb::Link l;
+	       l.Copy(model_p->GetLink(i));
+	       links[i] = l;
+	    }
+	 } 
+      }
+   }
+}
+
+
 
 // Note, we also create a chain and add this residue to that chain.
 // We do this so that we have a holder for the segid.
